2005-01-04  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/ScreenChangedArgs.xml
	* en/Gtk/PropertyNotifyEventArgs.xml
	* en/Gtk/PreActivateArgs.xml
	* en/Gtk/PopupContextMenuArgs.xml
	* en/Gtk/PostActivateArgs.xml
	* en/Gtk/PathClickedArgs.xml
	* en/Gtk/NoExposeEventArgs.xml
	* en/Gtk/PixbufInsertedArgs.xml: Documented event args.

2005-01-04  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/Image.xml
	* en/Gtk/RetrieveSurroundingArgs.xml
	* en/Gtk/IMMulticontext.xml
	* en/Gtk/FileInfo.xml
	* en/Gtk/FileInfoType.xml
	* en/Gtk/IMStatusStyle.xml
	* en/Gtk/RetrieveSurroundingHandler.xml
	* en/Gtk/IMPreeditStyle.xml: Added docs.

2005-01-03  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/IMContextSimple.xml
	* en/Gtk/IMContext.xml
	* en/Gtk/IMContextInfo.xml: Added docs.

2005-01-03  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/HButtonBox.xml
	* en/Gtk/Global.xml
	* en/Gtk/FontButton.xml: Add docs.
	
2005-01-03  Mike Kestner  <mkestner@novell.com>
	
	* en/Gtk/TreeNodeAttribute.xml : document ListOnly and add example.

2005-01-03  Shane Landrum  <epicene@pobox.com>
	
	* en/Gtk/DrawingArea.xml
	* en/Gtk/Expander.xml
	* en/Gtk/ComboBox.xml
	* en/Gtk/Style.xml
	* en/Gtk/EntryCompletion.xml
	* en/Gtk/EventBox.xml: Added docs; turned
	some @param to <paramref name="param"/>.

2005-01-03  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/DrawGdkArgs.xml
	* en/Gtk/ContainerChild.xml
	* en/Gtk/DestroyNotify.xml
	* en/Gtk/Draw.xml
	* en/Gtk/CellViewMenuItem.xml
	* en/Gtk/CellView.xml
	* en/Gtk/Callback.xml
	* en/Gtk/Container.xml: Added docs.

2005-01-02  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/ComboBox.xml: Doc edits.
	* en/Gtk/ContainerChild.xml
	* en/Gtk/Drag.xml
	* en/Gtk/Draw.xml
	* en/Gtk/CellViewMenuItem.xml
	* en/Gtk/DisconnectProxyArgs.xml
	* en/Gtk/CellView.xml
	* en/Gtk/Container.xml: added docs.

2005-01-02  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/ComboBox.xml
	* en/Gtk/CellViewMenuItem.xml
	* en/Gtk/CellView.xml
	* en/Gtk/CellRendererSepText.xml