@@ -11,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Helper class for <see cref="T:Gtk.IMContext" />.</summary>
-    <remarks />
+    <remarks>TODO: Not used in Gtk#; should be removed?</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -27,7 +27,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks />
       </Docs>
     </Member>
@@ -56,7 +56,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks />
       </Docs>
     </Member>
@@ -69,7 +69,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks />
       </Docs>
     </Member>
@@ -82,7 +82,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks />
       </Docs>
     </Member>
@@ -95,7 +95,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks />
       </Docs>
     </Member>
@@ -108,7 +108,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks />
       </Docs>
     </Member>
