@@ -10,7 +10,7 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
+    <summary>Not used in Gtk#. Do not use.</summary>
     <remarks />
   </Docs>
   <Base>
@@ -38,7 +38,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -52,7 +52,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -79,7 +79,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks></remarks>
       </Docs>
     </Member>
