@@ -217,10 +217,10 @@
         <Parameter Name="path" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="ifactory_path">a <see cref="T:System.String" /></param>
-        <param name="path">a <see cref="T:System.String" /></param>
-        <remarks>To be added</remarks>
+        <summary>Deletes all widgets constructed from the specified path.</summary>
+        <param name="ifactory_path">a <see cref="T:System.String" />, a factory path to prepend to <paramref name="path"/>. May be <see langword="null"/> if <paramref name="path"/> starts with a factory path.</param>
+        <param name="path">a <see cref="T:System.String" />, a path</param>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
