@@ -422,8 +422,34 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks />
+        <summary>
+	    This event is fired when the toolbar is displaying an
+	    overflow menu and is trying to determine if toolitem
+	    should appear in the overflow menu.
+	</summary>
+        <remarks>
+	  <para>
+	    In response to this event, toolitems
+	    should either call the <see
+	    cref="Gtk.ToolItem.SetProxyMenuItem"/> method specifying
+	    menu_item as None and return <see langword="true"/> to indicate that the
+	    item should not appear in the overflow menu, OR call the
+	    <see cref="Gtk.ToolItem.SetProxyMenuItem"/> method with a
+	    new menu item and return <see langword="true"/>, OR
+
+	    return <see langword="false"/> to indicate that the signal was not handled
+	    by the item. This means that the item will not appear in the
+	    overflow menu unless a later handler installs a menu item.
+	  </para>
+	  <para>
+	    The toolbar may cache the result of this signal. When the
+	    tool item changes how it will respond to this signal it
+	    must call the rebuild_menu() method to invalidate the
+	    cache and ensure that the toolbar rebuilds its overflow
+	    menu.
+	  </para>
+	  <para>TODO: figure out why there is no rebuild_menu in gtk#</para>
+	</remarks>
       </Docs>
     </Member>
     <Member MemberName="TooltipSet">
