@@ -175,7 +175,7 @@ The behaviour is chosen based on the "is_important" property of the action to wh
       <Docs>
         <summary>emoves an action group from the list of action groups</summary>
         <param name="action_group">a <see cref="T:Gtk.ActionGroup" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GetWidget">
@@ -298,7 +298,7 @@ The behaviour is chosen based on the "is_important" property of the action to wh
         <summary>Parses a file containing a UI definition and merges it with the current contents.</summary>
         <param name="filename">a <see cref="T:System.String" />,  the name of the file to parse</param>
         <returns>a <see cref="T:System.UInt32" />.   The merge id for the merged UI. The merge id can be used to unmerge the UI with <see cref="M:Gtk.UIManager.RemoveUi()" />. If an error occurred, the return value is 0.</returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GetAction">
@@ -330,7 +330,7 @@ The behaviour is chosen based on the "is_important" property of the action to wh
         <summary>Adds a UI element to the current contents from an embedded resource.</summary>
         <param name="resource">a <see cref="T:System.String" /></param>
         <returns>a <see cref="T:System.UInt32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -504,9 +504,12 @@ The behaviour is chosen based on the "is_important" property of the action to wh
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>
+	  Returns an unused merge id, suitable for use with 
+	  <see cref="Gtk.UIManager.AddUi"/>.
+	</summary>
         <returns>a <see cref="T:System.UInt32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ActionGroups">
