@@ -1,3 +1,14 @@
+2005-01-05  Shane Landrum  <epicene@pobox.com>
+
+	* en/Gtk/Item.xml
+	* en/Gtk/Input.xml
+	* en/Gtk/ToolItem.xml
+	* en/Gtk/UIManager.xml: Added docs.
+	* en/Gtk/IMStatusStyle.xml
+	* en/Gtk/IMPreeditStyle.xml
+	* en/Gtk/IMContextInfo.xml: Marked "do not use"
+	pending resolution of bug 71021.
+	
 2005-01-04  Shane Landrum  <epicene@pobox.com>
 
 	* en/Gtk/ScreenChangedArgs.xml
